Fix footer alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: black;
+  color: white;
   font-family: verdana, sans-serif;
   text-align: center;
 }
@@ -7,7 +8,20 @@ body {
 h1 {
   font-weight: normal;
   font-size: 50px;
-  color: white;
+}
+
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+}
+
+p {
+  font-size: 21px;
+  color: gray;
+}
+
+p.footer {
+  text-align: right;
 }
 
 a.download-text {
